<resources>
    <string name="app_name">QuizAlong</string>
    <string name="lifelines">LifeLines</string>
    <string name="click_to_apply">CLICK TO APPLY</string>
    <string name="by_retrytech">By Retrytech</string>
    <string name="quizbox_is_the_app_where_you_can_nplay_pre_made_quiz_and_increase_your_nknowledge_playing_and_winning_the_quiz_nyou_also_get_rewarded_points_which_you_ncan_redeem_then">QuizBox is the app where you can \n play pre-made quiz and increase your \n knowledge.Playing and winning the quiz, \n you also get rewarded points which you \n can redeem then.</string>
    <string name="enjoy_and_have_fun">Enjoy and have fun…!</string>
    <string name="by_signing_in_you_are_agreeing_to_our">By signing in you are agreeing to our</string>
    <string name="start">Start</string>
    <string name="log_in_to_continue">Log in to continue</string>
    <string name="enter_your_mail">Enter your mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="set_password">Create Account</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="sign_in_with_facebook">Sign in with facebook</string>
    <string name="create_account">Create Account</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="referral_code">Referral Code (optional)</string>
    <string name="enter_referral_code">Enter Referral Code (optional)</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="start_playing_and_earn_rewards">Lets start Learning and Earning !</string>
    <string name="hello_name">Hello Dr Parth</string>
    <string name="check_quizes">Check Quizzes</string>
    <string name="popular_quizes">Popular Quizzes</string>
    <string name="upcoming_quizes">Upcoming Quizzes</string>
    <string name="past_quizes">Past Quizzes</string>
    <string name="points">Points</string>
    <string name="questions">Questions</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="play_history">Play History</string>
    <string name="redeem_requests">Redeem Requests</string>
    <string name="updates">Updates</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="gold_player">Gold Player</string>
    <string name="quizes_played">Quizzes Played</string>
    <string name="points_earned">Points Earned</string>
    <string name="wallet">Wallet</string>
    <string name="skip">SKIP</string>
    <string name="correct_fast">CORRECT &amp; FAST</string>
    <string name="lobby">LOBBY</string>
    <string name="quiz_shall">QUIZ SHALL BEGIN IN</string>
    <string name="remember">Remember:- Winners are calculated by maximum number correct answers followed by minimal time taken.</string>
    <string name="lets_go">Let&#8216;s GO </string>
    <string name="skip_the_question">Skip the question</string>
    <string name="more_coins">More Coins</string>
    <string name="redeem">Redeem Coins</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="your_code_is">Your code is</string>
    <string name="log_out">Log Out</string>
    <string name="select_payment_gateway">Select payment Gateway</string>
    <string name="enter_account_credentials">Enter Account Credentials</string>
    <string name="submit">Submit</string>
    <string name="notifications">Notifications</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="total_score">Total Score</string>
    <string name="exit">Exit</string>
    <string name="finished">Finished</string>
    <string name="complete">Complete</string>
    <string name="cancel">Cancel</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="double_dip">Double Dip</string>
    <string name="fifty_fifty">Fifty Fifty</string>
    <string name="quiz_rapid_fire_text">This Quiz is Rapid Fire ,\nwhere you have to answer\nall the questions within\nspecific time limit or\nthat answer will be counted\nas false automatically !</string>
    <string name="ok_start">OK, Start</string>
    <string name="you_earned">You Earned</string>
    <string name="next">Next</string>
    <string name="enter_your_college">Enter your college name</string>
    <string name="select_id_proof">Select ID Proof</string>
    <string name="select_dob">Select Date Of Birth</string>
    <string name="date_format">DD/MM/YYY</string>
    <string name="terms_conditions">Accept Terms and Conditions</string>
    <string name="select_courses">Select courses</string>
    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="select_year_pass">Select current official year</string>
    <string name="submit_userinfo">Submit</string>
    <string name="quiz_with_twist">Quiz With Twist</string>
    <string name="upcoming_quiz">Upcoming Quiz</string>
    <string name="past_quiz">Past Quiz</string>
    <string name="additional_info">Additional Info</string>
    <!--    Facebook Login Credential-->
    <!-- Test: 298923915695806 -->
    <!-- Main: 545361686831488 ,   fb545361686831488    0a2adf4f80faf6d03d644544fcd24220  -->
    <string name="facebook_app_id">298923915695806</string>
    <string name="fb_login_protocol_scheme">fb298923915695806</string>
    <string name="facebook_client_token">c223f1a0ds    cxx 55cf4ae81bfef9becc67de85</string>

    <string name="sign_up_successfully">Check your email for verification</string>
    <string name="log_in_successfully">Log In successfully.</string>
    <string name="live_data_successfully">Quiz Completed.</string>
    <string name="cat_add_successfully">Categories added successfully.</string>
    <string name="correct_answer_is">Correct answer is</string>
    <string name="silver_player">Silver Player</string>
    <string name="pro_player">Pro Player</string>

    <!--    Admob-->
    <string name="admob_app_id">ca-app-pub-2039805943140065~3426164958</string>
    <string name="admob_interestial">----</string>
    <string name="admob_rewarded">----</string>
    <string name="admob_native">----</string>
    <string name="admob_banner">----</string>

    <!--    FaceBook Ads-->
    <string name="facebook_interstial">---</string>
    <string name="facebook_native">---</string>
    <string name="fbbanner" />
    <string name="choose_text">Choose 2 or more categories</string>
    <string name="razor_pay_test_key">rzp_test_RDLFlV1Kg8XmCo</string>
    <string name="razor_pay_test_key2">rzp_test_Kl1o35vLhCFxCW</string>
    <string name="mins">mins</string>
    <string name="category_help_text">\u25CF You can always change your favourite category using [img src=ic_star_checked/] feature on top right corner of each category</string>
    <string name="minimum_2_favourite">\u25CF Minimum 2 favourite categories are required</string>
    <string name="my_quiz">My Quiz</string>
    <string name="faq_a_1">Yes 100%, and we believe in complete transparency. As soon as winners are declared your winning credits will be initiated to your source of payment.</string>
    <string name="faq_a_2">There are no limits, so enroll and win in as many quizzes as you possibly can.</string>
    <string name="faq_a_3">Winner selection algorithm is based on 2 aspects, in order: 1) Number of questions correct 2) Cumulative time taken for entire quiz.</string>
    <string name="faq_a_4">“SKIP” lifeline helps you to pass a question as correct before you can attempt it. You can only use one life per game.</string>
    <string name="faq_a_5">Yes! You can pick and play any category quiz. You can also change your interested categories any time later.</string>
    <string name="faq_a_6">Add your friend’s referral code and you both get an extra lifeline.</string>
    <string name="faq_a_7">We require ID proof to verify and protect accounts. We need to keep our users protected.</string>
    <string name="faq_a_8">Payment Gateway - Razorpay charges a small fee while paying through wallet, UPI or cards. We suggest opting Wallet and UPI for instant credit of winnings in your account.</string>
    <string name="faq_a_9">Reach out to us on contact@quizalong.com with your username and Quiz details and we’ll surely get back to you.</string>
    <string name="faq_a_10">You can pick a quiz of any subject you like, anyday, anytime and play for Free / Paid. Moreover, We also provide the TimeTable for upcoming days of the week so that you can plan your week ahead.</string>
    <string name="faq_a_11">Issue not listed here? Extensive FAQs has been covered on our website www.quizalong.com/FAQs</string>
    <string name="faq_q_1">Is the money real?</string>
    <string name="faq_q_2">How much can I earn in a day?</string>
    <string name="faq_q_3">How are winners decided?</string>
    <string name="faq_q_4">What is a “SKIP”  lifeline? </string>
    <string name="faq_q_5">Can I play quiz which are not of my current year?</string>
    <string name="faq_q_6">How does referral work?</string>
    <string name="faq_q_7">Why does QuizAlong require a ID proof to sign up?</string>
    <string name="faq_q_8">Why is there a convenience fee deduction  from my winnings?</string>
    <string name="faq_q_9">Having a problem related to payments?</string>
    <string name="faq_q_10">What do you mean by 100% Flexibility?</string>
    <string name="faq_q_11">Having other trouble?</string>
    <string name="faqs">FAQs</string>
    <string name="transaction_history">Transaction History</string>
    <string name="search">Search</string>
    <string name="yesterday">Yesterday</string>
    <string name="available_coins">Available Coins</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="free">Free</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="proceed_to_enroll">Proceed to Enroll</string>
    <string name="note_top_50_of"><![CDATA[Note: Top <u>%1$d%%</u> of only PAID participants will win <u>%2$dx</u> the entry fee at the end of quiz.]]></string>
    <string name="pay">Pay</string>
    <string name="_2_x">2 X</string>
    <string name="let_s_go">Let\'s GO</string>
    <string name="skip_lifeline_helps_"># SKIPLifeline helps you to pass question on correct</string>
    <string name="did_you_know">Did you know?</string>
    <string name="check_score"><![CDATA[Check Score ->]]></string>
    <string name="start_now"><![CDATA[Start Now ->]]></string>
    <string name="made_in_india">Made in India</string>
    <string name="all">all</string>
    <string name="payments">payments</string>
    <string name="winnings">winnings</string>
    <string name="select">Select</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="current_official_year">Current Official Year</string>
    <string name="email_address">Email Address</string>
    <string name="college_name">College Name</string>
    <string name="quiz_already_started">Quiz already started!</string>
    <string name="_00_00_00">00:00:00</string>

    <string-array name="payment">
        <item>Select Gateway</item>
        <item>PayPal</item>
        <item>Paytm</item>
    </string-array>
</resources>