<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="25dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <ImageView
            android:layout_width="275dp"
            android:layout_height="65dp"
            android:scaleType="centerCrop"
            android:src="@drawable/popup_gead_bg" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/quiz_along_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/proceed_to_enroll"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_white_25"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/gilroy_medium"
                android:paddingHorizontal="8dp"
                android:paddingVertical="10dp"
                android:text="@string/free"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <Button
                android:id="@+id/btn_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_white_25"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/gilroy_medium"
                android:paddingHorizontal="8dp"
                android:paddingVertical="10dp"
                android:text="@string/pay"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="250dp"
                android:fontFamily="@font/gilroy_bold"
                android:paddingHorizontal="8dp"
                android:paddingVertical="10dp"
                android:text="@string/note_top_50_of"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/cancel"
                android:textColor="@color/grey"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>