<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.splash.WelcomeActivity">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_app" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logo"
                android:transitionName="logo"
                android:layout_width="190dp"
                android:layout_height="100dp"
                android:src="@drawable/quizbox_logo" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="125dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/hi_intro" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="15dp"
                android:fontFamily="@font/gilroy_medium"
                android:gravity="center"
                android:lineSpacingExtra="10dp"
                android:text="@string/quizbox_is_the_app_where_you_can_nplay_pre_made_quiz_and_increase_your_nknowledge_playing_and_winning_the_quiz_nyou_also_get_rewarded_points_which_you_ncan_redeem_then"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/gilroy_bold"
                android:gravity="center"
                android:text="@string/enjoy_and_have_fun"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btn_start"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/bg_white_50"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/gilroy_bold"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="45dp"
                android:fontFamily="@font/gilroy_reguler"
                android:gravity="center"
                android:text="@string/by_signing_in_you_are_agreeing_to_our"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/gilroy_medium"
                android:gravity="center"
                android:text="Terms and Privacy Policy"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </RelativeLayout>
</layout>