<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.payment.TransactionHistoryActivity">

    <data>
        <variable
            name="viewModel"
            type="com.thequizapp.quizalong.viewmodel.TransactionHistoryViewModel" />

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/cobalt_blue"
            app:contentInsetStart="0dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/transaction_history"
                android:textSize="20dip"
                android:fontFamily="@font/gilroy_bold"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@drawable/bg_oval"
                android:backgroundTint="@color/white"
                android:padding="10dp"
                android:src="@drawable/ic_back" />

            <!--<ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:background="@drawable/ic_profile_user"
                android:backgroundTint="@color/white"
                />-->
        </androidx.appcompat.widget.Toolbar>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp" >

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">
                <com.google.android.material.tabs.TabItem
                    android:id="@+id/all"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/all"/>
                <com.google.android.material.tabs.TabItem
                    android:id="@+id/payments"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/payments"/>
                <com.google.android.material.tabs.TabItem
                    android:id="@+id/winnings"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/winnings"/>
            </com.google.android.material.tabs.TabLayout>
        </androidx.viewpager.widget.ViewPager>

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/rv_leader_board"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:orientation="vertical"-->
<!--            android:paddingHorizontal="10dp"-->
<!--            app:adapter="@{viewModel.transactionAdapter}"-->
<!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
<!--            tools:listitem="@layout/item_transaction" />-->
<!--            tools:listitem="@layout/item_winning" />-->


    </LinearLayout>
</layout>