<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
                android:src="@drawable/quiz_bg" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:padding="25dp"
                android:src="@drawable/quizbox_logo" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/lyt_leader_board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:paddingVertical="15dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/bg_oval"
                android:backgroundTint="@color/purple"
                android:padding="8dp"
                android:src="@drawable/ic_bar_chart"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/leaderboard"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/dark_grey" />

        <LinearLayout
            android:id="@+id/lyt_play_history"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:paddingHorizontal="15dp"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_round_history" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/play_history"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:visibility="gone"
            android:background="@color/dark_grey" />

        <LinearLayout
            android:id="@+id/lyt_redeem_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:paddingVertical="15dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:padding="2dp"
                android:src="@drawable/ic_dollar_symbol" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/redeem_requests"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/dark_grey" />

        <LinearLayout
            android:id="@+id/lyt_update"
            android:paddingVertical="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:padding="2dp"
                android:src="@drawable/ic_notification" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/updates"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/dark_grey" />

        <LinearLayout
            android:id="@+id/lyt_privacy"
            android:paddingVertical="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:padding="2dp"
                android:src="@drawable/ic_privacy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/privacy_policy"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/dark_grey" />

        <LinearLayout
            android:id="@+id/lyt_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:layout_marginHorizontal="15dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:padding="2dp"
                android:src="@drawable/ic_term_of_use" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/terms_of_use"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/dark_grey" />
    </LinearLayout>
</layout>